# typstsharp

./: .gitignore  PLAN.md  README.md  RELEASENOTES.md  typstsharp.sln  typstsharp.slnx
.github/actions/build-pack/: action.yml
.github/workflows/: pack.yml  release.yml
local-ci/: Dockerfile  test-build.sh
repro/: Dockerfile  Dockerfile.alpine
repro/TestApp/: Program.cs  TestApp.csproj  nuget.config
src/typst_core/: Cargo.toml  build.rs
src/typst_core/.cargo/: config.toml
src/typst_core/src/: compiler.rs  download.rs  lib.rs  test_parse.rs  world.rs
src/typstsharp/: Bindings.g.cs  JsonSerialisation.cs  TypstClient.cs  TypstCompiler.cs  typstsharp.csproj
src/typstsharp.cli/: Program.cs  typstsharp.cli.csproj
src/typstsharp.tests/: GlobalSetup.cs  Tests.cs  typstsharp.tests.csproj
