[package]
name = "typst_core"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
codespan-reporting = "0.12"
comemo = "0.5.0"
ecow = "0.2"
pathdiff = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
typst = "0.14.2"
typst-kit = { version = "0.14.2", features = [
    "downloads",
    "embed-fonts",
    "vendor-openssl",
] }
typst-pdf = "0.14.2"
typst-svg = "0.14.2"
typst-render = "0.14.2"
typst-eval = "0.14.2"
typst-html = "0.14.2"

[build-dependencies]
csbindgen = "1.9.7"