[package]
name = "typst_core"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
codespan-reporting = "0.12"
comemo = "0.5.0"
ecow = "0.2"
pathdiff = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
typst = "0.15.0-rc.1"
typst-kit = { version = "0.15.0-rc.1", features = [
    "system-packages",
    "embedded-fonts",
    "scan-fonts",
    "system-downloader",
    "datetime",
    "vendor-openssl",
] }
typst-pdf = "0.15.0-rc.1"
typst-svg = "0.15.0-rc.1"
typst-render = "0.15.0-rc.1"
typst-eval = "0.15.0-rc.1"
typst-html = "0.15.0-rc.1"
typst-layout = "0.15.0-rc.1"

[build-dependencies]
csbindgen = "1.9.7"